<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    tools:context=".app.screens.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_time_monitoring"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="09.11.2022 16:01" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="10dp"
                android:fillViewport="true"
                android:scrollbars="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal"
                    android:background="@android:color/transparent">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:background="@android:color/transparent"
                        tools:text="CPU:" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="100dp"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:background="@android:color/transparent"
                        tools:text=" 37" />

                </LinearLayout>

                    <view
                        class="info.sergeikolinichenko.cpuandbatterytemperaturemonitor.app.utils.DrawLines"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="2dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </FrameLayout>

            </androidx.core.widget.NestedScrollView>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="2dp"
        android:background="@color/black" />


    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        app:backgroundTint="?attr/colorPrimaryVariant"
        app:contentInsetEnd="2dp"
        app:contentInsetStart="2dp"
        app:fabAlignmentMode="end"
        app:fabAlignmentModeEndMargin="5dp"
        app:layout_behavior=".app.utils.BottomAppBarBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/but_save_file"
                style="@style/Button_BottomAppBar"
                android:text="@string/send_file" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/but_clear_db"
                style="@style/Button_BottomAppBar"
                android:text="@string/clear_db" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/but_exit_app"
                style="@style/Button_BottomAppBar"
                android:text="@string/exit_app" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextView_BottomAppBar"
                    android:text="@string/monitoring_switch"
                    tools:text="Monitoring Switch" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextView_BottomAppBar"
                        android:layout_weight="1"
                        android:text="@string/stop"
                        tools:text="STOP" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switch1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextView_BottomAppBar"
                        android:layout_weight="1"
                        android:text="@string/start"
                        tools:text="START" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


    </com.google.android.material.bottomappbar.BottomAppBar>

    <!-- com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="120"
        android:layout_height="wrap_content"
        android:text="@string/monitoring_stop"
        android:textSize="11sp"
        android:textStyle="bold"
        android:textColor="?attr/colorOnPrimary"
        android:textAlignment="center"
        app:backgroundTint="?attr/colorPrimary"
        app:behavior_hideable="true"
        app:layout_anchor="@id/bab"
        app:elevation="10dp"/ -->

</androidx.coordinatorlayout.widget.CoordinatorLayout>